# Arcus-system

./: .dockerignore  .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/desktop/: devcontainer.json
.devcontainer/jetson/: devcontainer.json
src/arcus_bringup/: package.xml  setup.py
src/arcus_bringup/launch/: display.launch.py  gazebo.launch.py  vesc_test.launch.py
src/arcus_controllers/: CMakeLists.txt  package.xml  plugin_description.xml
src/arcus_controllers/include/arcus_controllers/: ackermann_controller.hpp
src/arcus_controllers/src/: ackermann_controller.cpp
src/arcus_description/: CMakeLists.txt  package.xml
src/arcus_description/config/: hw_controller.yaml  sim_controller.yaml
src/arcus_description/rviz/: display.rviz
src/arcus_description/urdf/: gz_ros2_control.xacro  hw_ros2_control.xacro  robot.urdf.xacro  robot_core.xacro  test_robot.urdf
src/arcus_hardware/: CMakeLists.txt  package.xml  plugin_description.xml
src/arcus_hardware/include/arcus_hardware/: vesc_driver.hpp  vesc_interface.hpp  vesc_packet.hpp
src/arcus_hardware/src/: vesc_driver.cpp  vesc_interface.cpp  vesc_packet.cpp
src/arcus_hardware/test/: test_vesc.cpp
src/arcus_teleop/: CMakeLists.txt  package.xml
src/arcus_teleop/launch/: teleop_joy.launch.py
src/arcus_teleop/src/: teleop_joy.cpp  teleop_key.cpp
